[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apollo-quant"
version = "2.0.0"
description = "AI-augmented probabilistic crypto trading engine"
requires-python = ">=3.12"
license = {text = "MIT"}

dependencies = [
    # === Data ===
    "numpy>=1.26",
    "pandas>=2.2",
    "requests>=2.31",
    "pyarrow>=15.0",            # Parquet with zstd compression

    # === ML / Quant ===
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "hmmlearn>=0.3",
    "arch>=6.3",                # GARCH / EGARCH
    "joblib>=1.3",              # Model persistence
    "ta>=0.11",                 # Technical analysis indicators
    "scipy>=1.12",              # Clustering, stats

    # === AI ===
    "openai>=1.30",             # Wraps Google Gemini + OpenAI + compatible APIs
    "tiktoken>=0.7",            # Token estimation

    # === Config ===
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.3",
    "hypothesis>=6.98",         # Property-based testing
]
viz = [
    "matplotlib>=3.8",
    "plotly>=5.18",
]
ai-extra = [
    "anthropic>=0.34",          # Anthropic Claude (optional)
    "tiktoken>=0.7",            # Token estimation
]

# [project.scripts]
# apollo = "scripts.cli:main"  # Use: python -m scripts.cli run

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short -q"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
